--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-featuretools>=0.1.16
-jupyter==1.0.0
-scikit-learn>=0.19.0
-xgboost>=0.6
+featuretools>=0.5.1
+jupyter>=1.0.0
+scikit-learn>=0.20.2
+xgboost>=0.81
